# visual_odometry

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: FindG2O.cmake
config/: default.yaml
docs/: README.md  _sidebar.md  index.html
docs/core/: camera_model.md  lie_algebra.md  visual_odometry_frontend.md
src/core/: backend.cpp  backend.h  camera_model.cpp  camera_model.h  common_include.h  feature.h  feature_manager.cpp  feature_manager.h  frame.cpp  frame.h  frontend.cpp  frontend.h  g2o_types.h  lie_algebra.cpp  lie_algebra.h  map.cpp  map.h  mappoint.cpp  mappoint.h  pose_graph.cpp  pose_graph.h  visual_odometry.cpp  visual_odometry.h
src/io/: data_loader.h  euroc_api.cpp  euroc_api.h  kitti_api.cpp  kitti_api.h
src/utils/: config.cpp  config.h  eigen-yaml-serialization.h
src/viewer/: viewer.cpp  viewer.h
test/: CMakeLists.txt  test_lie.cpp
test/apps/: test_vo.cpp
test/core/: test_posegraph.cpp
test/io/: test_io.cpp
test/utils/: test_cofig.yaml  test_config.cpp
